🐛 en listado de usuarios